smiaregs: Generic i2c register writing
Squashed from the following commits:

smiaregs: Generic i2c register writing
smiaregs: window stuff
smiaregs: add support for mode information controls
smiaregs: add sensitivity parameter
smiaregs: smiaregs.h is not meant for user space at all
smiaregs: add magic to firmware to identify it and its version
smiaregs: fix wild pointer in smia_reglist_find_type()
smiaregs: Fix format enumeration, print modelist in import
smiaregs: add physical sensor image window information
smiaregs: skip modes which do cropping on sensor
smiaregs: Do not select cropped modes for now
smiaregs: Cleanups, fix compile warnings
smiaregs: Be less noisy
smiaregs: smiaregs.h: Add opsys_clock member to smia_mode
smiaregs: Mark controls list as const in the control query functions
smiaregs: fix checkpatch warning
smiaregs: return error when i2c transfer fail
smiaregs: Remove skipping crop modes
smiaregs: Sort sensor modes by Width Height and FR
smiaregs: Use sensor modes with different aspect ratio
smiaregs: Pass width and height explicitly to smia_reglist_find_mode_fmt
smiaregs: Make smia_reglist_find_mode_fmt return the closest format
smiaregs: Add smia_reglist_to_mbus function
smiaregs: Pass a v4l2_fract parameter to smia_reglist_find_mode_streamparm
smiaregs: Add media bus pixel code enumeration
smiaregs: Remove obsolete enum_fmt operation
smiaregs: Implement subdev pad-level frame size enumeration
smiaregs: Implement subdev pad-level frame interval enumeration
smiaregs: Take the format code into account when setting the format
smiaregs: Remove legacy frame size and intervals enumeration support

Signed-off-by: Laurent Pinchart <laurent.pinchart@ideasonboard.com>
Signed-off-by: Tuukka Toivonen <tuukka.o.toivonen@nokia.com>
Signed-off-by: Sakari Ailus <sakari.ailus@maxwell.research.nokia.com>
Signed-off-by: Nayden Kanchev <nkanchev@mm-sol.com>
Signed-off-by: Stanimir Varbanov <svarbanov@mm-sol.com>
Signed-off-by: Vimarsh Zutshi <vimarsh.zutshi@nokia.com

--- a/drivers/media/video/Makefile
+++ b/drivers/media/video/Makefile
@@ -128,6 +128,8 @@ obj-$(CONFIG_VIDEO_CAFE_CCIC) += cafe_ccic.o
 
 obj-$(CONFIG_VIDEO_OMAP3)	+= isp/
 
+obj-$(CONFIG_VIDEO_SMIAREGS)  += smiaregs.o
+
 obj-$(CONFIG_USB_DABUSB)        += dabusb.o
 obj-$(CONFIG_USB_OV511)         += ov511.o
 obj-$(CONFIG_USB_SE401)         += se401.o
