--- a/drivers/media/video/Makefile
+++ b/drivers/media/video/Makefile
@@ -132,6 +132,7 @@ obj-$(CONFIG_VIDEO_OMAP3)	+= isp/
 obj-$(CONFIG_VIDEO_SMIAREGS)  += smiaregs.o
 
 obj-$(CONFIG_VIDEO_ET8EK8)    += et8ek8.o
+obj-$(CONFIG_VIDEO_AD5820)	+= ad5820.o
 
 obj-$(CONFIG_USB_DABUSB)        += dabusb.o
 obj-$(CONFIG_USB_OV511)         += ov511.o
