rx51 camera: Board code
Squashed from the following upstream commits:

rx51: Camera Kconfig entries
rx51: Add camera base files
rx51: Just rx51 camera
rx51: Drop mt9p012t and tcm8330md sensors
rx51: change board files for smia-sensor
rx51: Don't use VAUX3 for new boards anymore
rx51: Tell if sensor power up failed
rx51: Do not set xclk in omap34xxcam_sensor_config
rx51: update configure_interface and calculate average pixel clock
rx51: limit maximum LED flash power to 320 mA
rx51: update the ISP API on camera board file
rx51: Interpret system_rev properly
rx51: adjust LED flash constraints to prevent overheating
rx51: Decrement wait_hs_vs by one
rx51: Port ad5820 platform data to v4l2_subdev
rx51: Port et8ek8 platform data to v4l2_subdev
rx51: Port smia-sensor platform data to v4l2_subdev
rx51: Remove fake platform data
rx51: Add a release callback to the platform device
rx51: Add omap34xxcam platform data
rx51: Header files have moved from mach to plat.
rx51: vpclk renamed vpclk_div
rx51: Add omap3isp_device pointer to platform data.
rx51: Correct TWL register names
rx51 cam: Add ISP platform data
rx51 cam: Don't set removed isp_interface_config fields
rx51: Make it compile again.
rx51: Make camera board code compile
rx51: camera: set bus type correctly to CCP2
rx51 cam: Update to the new OMAP3 camera platform data
rx51: Update to the new OMAP3 ISP platform data
rx51: Update to the new OMAP3 ISP platform data
rx51 cam: Remove hardcoded I2C module names
rx51: Fix Kconfig breakage for camera
rx51: Select VIDEO_MACH_RX51 in MACH_NOKIA_RX51
rx51 cam: Calculate pixelclk for secondary sensor
rx51 cam: Update to the new OMAP3 ISP platform data
omap3: Export omap3_init_camera() instead of omap3isp_device
rx51 cam: Don't directly depend on ISP driver
rx51 cam: Board files compiled staticly now

Signed-off-by: Sakari Ailus <sakari.ailus@maxwell.research.nokia.com>
Signed-off-by: Laurent Pinchart <laurent.pinchart@ideasonboard.com>
Signed-off-by: Tuukka Toivonen <tuukka.o.toi

--- a/arch/arm/mach-omap2/Kconfig
+++ b/arch/arm/mach-omap2/Kconfig
@@ -120,6 +120,10 @@ config MACH_NOKIA_RX51
 	bool "Nokia RX-51 board"
 	depends on ARCH_OMAP3
 	select OMAP_PACKAGE_CBB
+	select VIDEO_ET8EK8 if VIDEO_OMAP3 && VIDEO_HELPER_CHIPS_AUTO
+	select VIDEO_AD5820 if VIDEO_OMAP3 && VIDEO_HELPER_CHIPS_AUTO
+	select VIDEO_ADP1653 if VIDEO_OMAP3 && VIDEO_HELPER_CHIPS_AUTO
+	select VIDEO_SMIA_SENSOR if VIDEO_OMAP3 && VIDEO_HELPER_CHIPS_AUTO
 
 config MACH_OMAP_ZOOM2
 	bool "OMAP3 Zoom2 board"
