--- a/include/linux/Kbuild
+++ b/include/linux/Kbuild
@@ -129,6 +129,7 @@ header-y += nfs2.h
 header-y += nfs4_mount.h
 header-y += nfs_mount.h
 header-y += nl80211.h
+header-y += omap3isp.h
 header-y += omapfb.h
 header-y += param.h
 header-y += pci_regs.h
