CMT: Add Nokia CMT driver to the configuration
Add the Nokia CMT driver to the kernel configuration.

Signed-off-by: Carlos Chinea <carlos.chinea@nokia.com>
Signed-off-by: Kai Vehmanen <kai.vehmanen@nokia.com>

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -354,6 +354,7 @@ config VMWARE_BALLOON
 	  module will be called vmware_balloon.
 
 source "drivers/misc/c2port/Kconfig"
+source "drivers/misc/cmt/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
 source "drivers/misc/iwmc3200top/Kconfig"
