--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -89,6 +89,12 @@ config BATTERY_OLPC
 	help
 	  Say Y to enable support for the battery on the OLPC laptop.
 
+config CHARGER_BQ2415x
+    tristate "BQ2415x charger"
+#    depends on TWL6030_BCI_BATTERY
+    help
+      Say Y to enable support for BQ24156 battery charger.
+
 config BATTERY_TOSA
 	tristate "Sharp SL-6000 (tosa) battery"
 	depends on MACH_TOSA && MFD_TC6393XB && TOUCHSCREEN_WM97XX
